@@ -464,19 +464,19 @@ set armeabitests {
      "farcall-data"}
 
     {"R_ARM_THM_JUMP24 Relocation veneers: Short 1" 
-     "-defsym _start=0x8000 --section-start destsect=0x00009000" 
+     "--section-start destsect=0x00009000 --section-start .text=0x8000" 
      "-march=armv7-a -mthumb" 
      {jump-reloc-veneers.s}
      {{objdump -d jump-reloc-veneers-short1.d}}
      "jump-reloc-veneers-short1"}
     {"R_ARM_THM_JUMP24 Relocation veneers: Short 2" 
-     "-defsym _start=0x8000 --section-start destsect=0x00900000" 
+     "--section-start destsect=0x00900000 --section-start .text=0x8000" 
      "-march=armv7-a -mthumb" 
      {jump-reloc-veneers.s}
      {{objdump -d jump-reloc-veneers-short2.d}}
      "jump-reloc-veneers-short2"}
     {"R_ARM_THM_JUMP24 Relocation veneers: Long" 
-     "-defsym _start=0x8000 --section-start destsect=0x09000000" 
+     "--section-start destsect=0x09000000 --section-start .text=0x8000" 
      "-march=armv7-a -mthumb" 
      {jump-reloc-veneers.s}
      {{objdump -d jump-reloc-veneers-long.d}}
